fix layout shift because of skeleton loading, update readme file
fix layout shift because of skeleton loading, update readme file

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,5 @@
 * {
   margin: 0;
-  padding-left: 0;
   box-sizing: border-box;
   font-family: "Montserrat", sans-serif;
 }
